--- a/index.html
+++ b/index.html
@@ -5,9 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
     
+   <section>
+    <div class="half-width">
+        <h1>Welcome To</h1>
+    <h1> <span class="orange-color">Sukanto Das</span> World</h1>
+    <h3>Build  Climber and Train Stopper</h3>
+    <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quod repellat voluptatibus iure sunt rem, sed quidem necessitatibus commodi dolorum doloremque dolore fuga, officiis nihil tenetur maxime est debitis odio. Voluptates!</p>
+
+    <a class="link-button" target="_blank" href="#">HIRE ME</a>
+    </div>
+    
+    <div class="half-width">
+        <img src="images/my-bg.jpg" alt="">
+    </div>
+
+   </section>
+
 </body>
 </html>
