--- a/index.html
+++ b/index.html
@@ -28,5 +28,18 @@
 
    </section>
 
+    <section class="dream-big">
+        <div class="half-width" >
+            <img src="images/my-bg.jpg" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h2>Become A Web Developer</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Atque odio similique omnis accusantium aspernatur corrupti. Ipsam, minima ullam maxime obcaecati repellendus voluptas voluptatem deleniti ipsum excepturi suscipit cumque ut sint.</p>
+            <a class="link-button" target="_blank" href="#">Downlode My CV</a>
+        </div>
+
+    </section>
+
 </body>
 </html>
